executable("test_runner") {

  defines = [
    "MBEDTLS_ERR_SSL_WANT_READ=-0x6900",
    "MBEDTLS_ERR_SSL_WANT_WRITE=0x6880",
    "MBEDTLS_ERR_SSL_PEER_CLOSE_NOTIFY=-0x7880",
  ]

  include_dirs = [
    "../cpp17_headers/include",
    "../delegate",
    ".",
    "stubs",
  ]

  cflags_cc = [
    "-std=c++14",
  ]

  sources = [
    "test_runner.cpp",
    "https_endpoint_test.cpp",
    "uri_parser_test.cpp",
    "../src/uri_parser.cpp",
    "../src/https_endpoint.cpp",
    "../src/https_response_streambuf.cpp",
  ]
}

group("root") {
  deps = [
    ":test_runner",
  ]
}
